samples/_failures_safe/1761005777_a1b123_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88133871.c: In function ‘main’:
./samples/SAFE/__tmp_88133871.c:142:27: error: missing terminating " character
  142 |         choice = read_int("Select operation (
      |                           ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_88133871.c:142:9: error: expected expression at end of input
  142 |         choice = read_int("Select operation (
      |         ^~~~~~
./samples/SAFE/__tmp_88133871.c:142:18: error: too few arguments to function ‘read_int’
  142 |         choice = read_int("Select operation (
      |                  ^~~~~~~~
./samples/SAFE/__tmp_88133871.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_88133871.c:142:9: error: expected declaration or statement at end of input
  142 |         choice = read_int("Select operation (
      |         ^~~~~~
./samples/SAFE/__tmp_88133871.c:142:9: error: expected declaration or statement at end of input
